# wearforge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run.ps1  run.sh  wearforge.py
.github/workflows/: ci.yml
tests/: test_wearforge.py
